# shmqueue_with_python_cpp

./: README.md  shmmqueue.cpp  shmmqueue.h
PyWapper/: CMakeLists.txt  PyShmqueue.py  shm_rwlockWapper.c  shm_rwlockWapper.h  shmmqueueWapper.c  shmmqueueWapper.h
cpp-cpp/: CMakeLists.txt  read.cpp  write.cpp
py-cpp/: CMakeLists.txt  read.cpp
py-cpp/benchmark/: write_batch.py
py-py/: read.py  write.py
